syntax = "proto3";

package greetGRPC;

option go_package="./";

message GreetReqt{
     string first_name =1;
}

message GreetResp {
    string reply = 1;
}

service GreetService {
     rpc Greet (GreetReqt) returns (GreetResp);
}